Fix caleandar day shadow effect in dark mode, add theme based selection style (#6)

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,16 @@
   }
 }
 
+::selection {
+  background-color: var(--bc-cim);
+}
+
+@media (prefers-color-scheme: dark) {
+  ::selection {
+    background-color: var(--bc-cm);
+  }
+}
+
 *,
 *::before,
 *::after {
